# ChangeLog for dev-python/pytools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pytools/ChangeLog,v 1.17 2013/08/09 11:17:24 jlec Exp $

*pytools-2013.5.6 (09 Aug 2013)

  09 Aug 2013; Justin Lecher <jlec@gentoo.org> pytools-2013.5.5.ebuild,
  +pytools-2013.5.6.ebuild:
  Verison BUmp

*pytools-2013.5.5 (22 Jul 2013)

  22 Jul 2013; Justin Lecher <jlec@gentoo.org> +pytools-2013.5.5.ebuild:
  Version Bump

  08 Jul 2013; Patrick Lauer <patrick@gentoo.org> pytools-2013.5.3.ebuild:
  Adding decorator test dep

*pytools-2013.5.3 (07 Jul 2013)

  07 Jul 2013; Justin Lecher <jlec@gentoo.org> +pytools-2013.5.3.ebuild:
  Version BUmp

*pytools-2013.5 (14 Jun 2013)

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> +pytools-2013.5.ebuild:
  Version Bump, #472810

*pytools-2013.2 (03 Jun 2013)

  03 Jun 2013; Justin Lecher <jlec@gentoo.org> +pytools-2013.2.ebuild:
  Version Bump

*pytools-2013.1 (13 May 2013)

  13 May 2013; Justin Lecher <jlec@gentoo.org> pytools-2012.1.ebuild,
  +pytools-2013.1.ebuild:
  Version BUmp

  15 Jan 2013; Justin Lecher <jlec@gentoo.org> pytools-2012.1.ebuild:
  Add correct PYTHON_USEDEP

*pytools-2012.1 (14 Jan 2013)

  14 Jan 2013; Justin Lecher <jlec@gentoo.org> +pytools-2012.1.ebuild,
  metadata.xml:
  Version Bump, #416409; take package

  21 Sep 2011; Michał Górny <mgorny@gentoo.org> pytools-9999.ebuild:
  Migrate to git-2. Simplify a little.

  01 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pytools-11.ebuild, pytools-9999.ebuild:
  Fix deprecation warnings.

  26 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pytools-9.ebuild:
  Delete.

*pytools-11 (12 Dec 2010)

  12 Dec 2010; Michał Januszewski <spock@gentoo.org> +pytools-11.ebuild:
  Version bump.

  14 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org> pytools-9.ebuild,
  pytools-9999.ebuild:
  Drop keywords on live package. Fix QA issues.

*pytools-9999 (09 Aug 2009)
