@@ -1,21 +1,29 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pytools/pytools-9999.ebuild,v 1.4 2011/09/21 08:46:39 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pytools/pytools-9999.ebuild,v 1.5 2013/08/25 03:23:58 floppym Exp $
 
-EAPI="3"
+EAPI=5
 
-inherit distutils git-2
+PYTHON_COMPAT=( python{2_5,2_6,2_7} )
 
-EGIT_REPO_URI="http://git.tiker.net/trees/pytools.git"
+inherit distutils-r1 git-2
 
 DESCRIPTION="A collection of tools missing from the Python standard library"
 HOMEPAGE="http://mathema.tician.de/software/pytools"
+EGIT_REPO_URI="http://git.tiker.net/trees/pytools.git"
 
-SRC_URI=""
 LICENSE="MIT"
-KEYWORDS=""
 SLOT="0"
-IUSE=""
+KEYWORDS=""
+IUSE="test"
 
-DEPEND="dev-python/setuptools"
+DEPEND="
+	>=dev-python/setuptools-0.7.2[${PYTHON_USEDEP}]
+	test? (
+		dev-python/pytest[${PYTHON_USEDEP}]
+		dev-python/decorator[${PYTHON_USEDEP}] )"
 RDEPEND=""
+
+python_test() {
+	py.test || die "Tests fail with ${EPYTHON}"
+}
