@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pytools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pytools/ChangeLog,v 1.17 2013/08/09 11:17:24 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pytools/ChangeLog,v 1.18 2013/08/25 03:23:58 floppym Exp $
+
+  25 Aug 2013; Mike Gilbert <floppym@gentoo.org> pytools-9999.ebuild:
+  Migrate live ebuild to distutils-r1.
 
 *pytools-2013.5.6 (09 Aug 2013)
 
